Fixed landing apge description area middle-divider overflow

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,7 +1,6 @@
 .description{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    min-height: 500px;
 }
 
 @media screen and (max-width: 1000px){
